# ai-learn

./: .env.example  .gitignore  .gitleaksignore  CLAUDE.md  README.md
.github/: CODEOWNERS
.github/workflows/: build-and-push.yml
docs/: README.md
docs/vm/: docker-services.md  server-init-guide.md
projects/: README.md
projects/agent-dashboard/: Dockerfile  README.md  docker-compose.yml  index.html  server.js
projects/ai-task-engine/: .env.example  DESIGN-REVIEW.md  Dockerfile  README.md  docker-compose.yml  package.json
projects/ai-task-engine/ems/: Dockerfile  pyproject.toml  requirements.txt
projects/ai-task-engine/ems/app/: embedding.py  main.py
projects/ai-task-engine/ems/app/routers/: health.py  learn.py  search.py
projects/ai-task-engine/ems/scripts/: seed.py
projects/ai-task-engine/ems/tests/: conftest.py  test_check.py  test_experiences.py  test_health.py  test_search.py
projects/auth-demo/: .dockerignore  Dockerfile  app.js  docker-compose.yml  package-lock.json  package.json
projects/experience-manager/: .env.example  Dockerfile  README.md  docker-compose.yml  seed_data.py
projects/kinship-calculator/: .env.example  README.md  docker-compose.yml  index.html
projects/listen-english/: Dockerfile  README.md  docker-compose.yml  index.html
projects/ms-login/: .env.azure.example  .env.example  Dockerfile  README.md  app.js  deploy-azure.sh  docker-compose.yml  package-lock.json  package.json  setup-azure-app.sh
projects/nav-portal/: Dockerfile  README.md  (+4 more)
skills/: README.md  git-workflow.md  install-skills.sh
vm/: README.md
(+227 files in other folders)
